<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_plus">+</string>
    <string name="_minus">-</string>
    <string name="_divide">÷</string>
    <string name="_multiply">×</string>
    <string name="_equal">=</string>
    <string name="_decimalSeparator">,</string>
    <string name="_plus_minus">+/-</string>
    <string name="_backspace">ᐊ</string>
    <string name="_C">C</string>
    <string name="text_result"></string>
    <string name="text_formula"></string>
    <string name="action_settings">Settings</string>
    <string name="choose_design">Choose a design:</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

</resources>