<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_C"
            android:text="@string/_C"
            android:backgroundTint="@color/orange"
            style="@style/StyleButton"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_backspace"
            android:text="@string/_backspace"
            android:backgroundTint="@color/orange"
            style="@style/StyleButton"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_plus_minus"
            android:layout_height="match_parent"
            android:textSize="@dimen/button_text_size_small"
            android:backgroundTint="@color/indigo"
            android:text="@string/_plus_minus"
            style="@style/StyleButton"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_divide"
            android:text="@string/_divide"
            android:backgroundTint="@color/indigo"
            style="@style/StyleButton"
            app:cornerRadius="0dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_7"
            android:text="@string/_7"
            style="@style/StyleButton"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_8"
            android:text="@string/_8"
            style="@style/StyleButton"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_9"
            android:text="@string/_9"
            style="@style/StyleButton"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_multiply"
            android:text="@string/_multiply"
            android:backgroundTint="@color/indigo"
            style="@style/StyleButton"
            app:cornerRadius="0dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_4"
            android:text="@string/_4"
            style="@style/StyleButton"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_5"
            android:text="@string/_5"
            style="@style/StyleButton"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_6"
            android:text="@string/_6"
            style="@style/StyleButton"
            app:cornerRadius="0dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_minus"
            android:text="@string/_minus"
            android:backgroundTint="@color/indigo"
            style="@style/StyleButton"
            app:cornerRadius="0dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_1"
            android:text="@string/_1"
            style="@style/StyleButton"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_2"
            android:text="@string/_2"
            style="@style/StyleButton"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_3"
            android:text="@string/_3"
            style="@style/StyleButton"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_plus"
            android:text="@string/_plus"
            android:backgroundTint="@color/indigo"
            style="@style/StyleButton"
            app:cornerRadius="0dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_0"
            style="@style/StyleButton"
            android:layout_weight="2"
            android:text="@string/_0"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_decimalSeparator"
            android:text="@string/_decimalSeparator"
            style="@style/StyleButton"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_equal"
            android:text="@string/_equal"
            android:backgroundTint="@color/purple_500"
            style="@style/StyleButton"
            app:cornerRadius="0dp" />
    </LinearLayout>



</LinearLayout>