<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_design"
        android:textSize="@dimen/setting_text"
        android:textColor="@color/black"/>

    <RadioGroup
        android:id="@+id/radios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2">
        <RadioButton
            android:id="@+id/radioButton_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_theme"
            android:textSize="@dimen/button_text_size_small"
            android:layout_marginTop="@dimen/margin_top" />

        <RadioButton
            android:id="@+id/radioButton_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme"
            android:textSize="@dimen/button_text_size_small"
            android:layout_marginTop="@dimen/margin_top" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginBottom="@dimen/margin_bottom">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            style="@style/StyleButtonForSettingsAct"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            style="@style/StyleButtonForSettingsAct"/>
    </LinearLayout>


</LinearLayout>